Updated to be fully JDK 1.8 compatible.